// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Localized
  attrs={
    Object {
      "aria-label": true,
    }
  }
  id="general-authenticationSection"
>
  <ForwardRef(forwardRef)
    alignItems="center"
    aria-label="Authentication"
    className="coral coral-viewerBox"
    container="section"
    wrap={true}
  >
    <Localized
      id="general-userBoxUnauthenticated-joinTheConversation"
    >
      <span
        className="UserBoxUnauthenticated-joinText coral coral-viewerBox-joinText"
      >
        Join the conversation
      </span>
    </Localized>
    <div
      className="UserBoxUnauthenticated-actions coral coral-viewerBox-actionButtons"
    >
      <Localized
        id="general-userBoxUnauthenticated-register"
      >
        <ForwardRef(forwardRef)
          className="UserBoxUnauthenticated-register coral coral-viewerBox-registerButton"
          color="primary"
          fontSize="extraSmall"
          onClick={[Function]}
          paddingSize="extraSmall"
          upperCase={true}
          variant="filled"
        >
          Register
        </ForwardRef(forwardRef)>
      </Localized>
      <Localized
        id="general-userBoxUnauthenticated-signIn"
      >
        <ForwardRef(forwardRef)
          className="coral coral-viewerBox-signInButton"
          color="primary"
          fontSize="extraSmall"
          onClick={[Function]}
          paddingSize="extraSmall"
          upperCase={true}
          variant="outlined"
        >
          Sign in
        </ForwardRef(forwardRef)>
      </Localized>
    </div>
  </ForwardRef(forwardRef)>
</Localized>
`;

exports[`renders correctly hides showRegisterButton 1`] = `
<Localized
  attrs={
    Object {
      "aria-label": true,
    }
  }
  id="general-authenticationSection"
>
  <ForwardRef(forwardRef)
    alignItems="center"
    aria-label="Authentication"
    className="coral coral-viewerBox"
    container="section"
    wrap={true}
  >
    <Localized
      id="general-userBoxUnauthenticated-joinTheConversation"
    >
      <span
        className="UserBoxUnauthenticated-joinText coral coral-viewerBox-joinText"
      >
        Join the conversation
      </span>
    </Localized>
    <div
      className="UserBoxUnauthenticated-actions coral coral-viewerBox-actionButtons"
    >
      <Localized
        id="general-userBoxUnauthenticated-signIn"
      >
        <ForwardRef(forwardRef)
          className="coral coral-viewerBox-signInButton"
          color="primary"
          fontSize="extraSmall"
          onClick={[Function]}
          paddingSize="extraSmall"
          upperCase={true}
          variant="outlined"
        >
          Sign in
        </ForwardRef(forwardRef)>
      </Localized>
    </div>
  </ForwardRef(forwardRef)>
</Localized>
`;
